    below change.

    Delay loading of the Carp module and avoid using [:upper:], \w, and \d
    in regular expressions to reduce the amount of memory this module
    consumes.  (Normally, I wouldn't worry about this, but this module is
    very light-weight and can be useful even in highly space-constrained
    environments, and the impact is slight.)  Thanks, Nicolas R.
    (#111552)

Term::ANSIColor 4.04 (2015-12-06)

    Revert the build system back to ExtUtils::MakeMaker.  This is the
    build system actually used in Perl core, so this removes a level of
    indirectly generated files and means that normal module development
    tests the same build system used by Perl.  Update Makefile.PL with the
    additional metadata from the Module::Build build system.

    For versions of Perl prior to 5.11, install the module into the Perl
    core module directories, since in those versions site modules did not
    take precedence over Perl core modules.

    Rename NEWS to Changes to match the normal Perl convention.

Term::ANSIColor 4.03 (2014-03-23)

    Switch the module build system to Module::Build, but still generate a
    Makefile.PL file for backward compatibility and for the use of Perl
    core.

    Fix typo in SYNOPSIS (colorstrip example) and duplicated word.
    Thanks, Olivier Mengué and David Steinbrunner.  (#85480, #94006)

    Skip POD and some other style tests unless doing automated or release
    testing.  Skip POD spelling, coverage, and Perl::Critic tests unless
    doing author testing.  Use the Lancaster Consensus environment
    variables instead of RRA_MAINTAINER_TESTS.  (#93474)

    Add SEE ALSO reference to Win32::Console::ANSI.  (#87295)

Term::ANSIColor 4.02 (2013-01-07)

    When testing 256-color support, list the tag first in the import list
    for compatibility with the Exporter from Perl 5.6.2.  Thanks to David
    Cantrell for the testing and debugging.

    Add the minimum Perl version to the package metadata.
